[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/EBGaramond-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/ubuntu.tres" type="DynamicFont" id=2]
[ext_resource path="res://JsonParser(WIP)/scriptEditor.gd" type="Script" id=3]
[ext_resource path="res://JsonParser(WIP)/TextEdit.gd" type="Script" id=4]
[ext_resource path="res://JsonParser(WIP)/popupTheme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0.352941, 0.596078, 0.580392, 1 )
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="scriptEditor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.152941, 0.152941, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="scriptEditor"]
margin_left = 20.3029
margin_top = 2.6196
margin_right = 442.303
margin_bottom = 122.62
rect_min_size = Vector2( 120, 120 )
custom_fonts/font = SubResource( 1 )
text = "JSON PARSER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="scriptEditor"]
margin_left = 573.048
margin_top = 46.0217
margin_right = 792.048
margin_bottom = 106.022
custom_fonts/font = ExtResource( 2 )
text = "Dialog Name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extension" type="Label" parent="scriptEditor"]
margin_left = 1005.31
margin_top = 46.0217
margin_right = 1105.31
margin_bottom = 106.022
custom_fonts/font = ExtResource( 2 )
text = "."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="scriptEditor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -900.0
margin_top = -940.0
margin_right = 556.0
margin_bottom = -40.0
custom_fonts/font = ExtResource( 2 )
custom_constants/line_spacing = 4
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
wrap_enabled = true
minimap_draw = true
caret_blink = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manual" type="Button" parent="scriptEditor"]
margin_left = 1128.73
margin_top = 48.2182
margin_right = 1524.73
margin_bottom = 98.2182
custom_fonts/font = ExtResource( 2 )
text = "Open User Manual (NA)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jsonButton" type="Button" parent="scriptEditor"]
margin_left = 1645.41
margin_top = 134.09
margin_right = 1776.41
margin_bottom = 184.09
custom_fonts/font = ExtResource( 2 )
text = "to .json"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadButton" type="Button" parent="scriptEditor"]
margin_left = 1747.82
margin_top = 50.0
margin_right = 1847.82
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogName" type="LineEdit" parent="scriptEditor"]
margin_left = 800.0
margin_top = 50.0
margin_right = 1000.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="scriptEditor"]
margin_right = 953.0
margin_bottom = 611.0
input_pass_on_modal_close_click = false
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.txt", "*.json" )

[node name="AcceptDialog" type="AcceptDialog" parent="scriptEditor"]
margin_right = 491.0
margin_bottom = 249.0
theme = ExtResource( 5 )
window_title = "Success!"
dialog_text = "
To Json success! You can find it in the VNScript folder."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="scriptEditor/jsonButton" to="scriptEditor" method="_on_jsonButton_pressed"]
[connection signal="pressed" from="scriptEditor/loadButton" to="scriptEditor" method="_on_loadButton_pressed"]
[connection signal="file_selected" from="scriptEditor/FileDialog" to="scriptEditor" method="_on_FileDialog_file_selected"]
